<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">モノちゃんびゅーわ</string>
    <string name="hello_world">Hello world!</string>
    <string name="back_home">ホーム</string>
    <string name="disclaimer">免責事項</string>
    <string name="map">地図</string>
    <string name="train">列車運行時刻表</string>
    <string name="time">駅時刻表</string>
    <string name="manual">説明書</string>
    <string name="exit">終了</string>
    <string name="TodayTrain">本日の運行状況</string>
    <string name="mono_chan">モノちゃん号</string>
    <string name="urbanflyer001_002">アーバンフライ0型\n0001&#8211;0002号</string>
    <string name="urbanflyer003_004">アーバンフライ0型\n0003&#8211;0004号</string>
    <string name="urbanflyer005_006">アーバンフライ0型\n0005&#8211;0006号</string>
    <string name="urbanflyer007_008">アーバンフライ0型\n0007&#8211;0008号</string>
    <string name="urbanflyer001_002w">アーバンフライ0型 0001&#8211;0002号</string>
    <string name="urbanflyer003_004w">アーバンフライ0型 0003&#8211;0004号</string>
    <string name="urbanflyer005_006w">アーバンフライ0型 0005&#8211;0006号</string>
    <string name="urbanflyer007_008w">アーバンフライ0型 0007&#8211;0008号</string>
    <string name="loading">取得中</string>
    <string name="TrainDiagram">列車ダイヤ</string>
    <string name="OpenMap">地図を開く</string>
    <string name="whitespace"> </string>
    <string name="annotation">※動</string>
    <string name="tableno">HA\n11</string>
    <string name="train_no_hour">09</string>
    <string name="train_no_delimiter">:</string>
    <string name="train_no_minute">00</string>
    <string name="train_no_station">動物公園駅</string>
    <string name="holiday">休日</string>
    <string name="weekday">平日</string>
    <string name="up">上り</string>
    <string name="down1">下り</string>
    <string name="down2">下り</string>
    <string name="train_no_id">ID:</string>
    <string name="train_no_iconeView">上/下</string>
    <string name="minute">05</string>

</resources>
