<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/TodayTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mono_chan"
        android:id="@+id/trainNo0"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urbanflyer001_002"
        android:id="@+id/trainNo1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/trainNo0"
        android:layout_alignParentLeft="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urbanflyer003_004"
        android:id="@+id/trainNo2"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/trainNo1"
        android:layout_alignParentLeft="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urbanflyer005_006"
        android:id="@+id/trainNo3"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/trainNo2"
        android:layout_alignParentLeft="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urbanflyer007_008"
        android:id="@+id/trainNo4"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/trainNo3"
        android:layout_alignParentLeft="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/HOLIDAY"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView2"
        android:textSize="25sp"
        android:layout_alignParentBottom="false"
        android:layout_alignTop="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/Service0"
        android:layout_alignRight="@+id/HOLIDAY"
        android:layout_alignEnd="@+id/HOLIDAY"
        android:layout_above="@+id/trainNo1"
        android:layout_alignTop="@+id/trainNo0"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/Service1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/trainNo2"
        android:layout_below="@+id/Service0"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/Service2"
        android:layout_alignRight="@+id/Service1"
        android:layout_alignEnd="@+id/Service1"
        android:layout_alignBottom="@+id/trainNo2"
        android:layout_below="@+id/Service1"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/Service3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/trainNo4"
        android:layout_below="@+id/Service2"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/Service4"
        android:layout_alignRight="@+id/Service3"
        android:layout_alignEnd="@+id/Service3"
        android:layout_alignBottom="@+id/trainNo4"
        android:layout_below="@+id/Service3"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TrainDiagram"
        android:id="@+id/textView13"
        android:layout_above="@+id/Service0"
        android:layout_alignRight="@+id/HOLIDAY"
        android:layout_alignEnd="@+id/HOLIDAY"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OpenMap"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
