<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="36sp"
    android:layout_width="wrap_content"
    android:id="@+id/time_table_Item"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whitespace"
        android:id="@+id/start"
        android:textSize="36sp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annotation"
            android:id="@+id/annotation"
            android:gravity="center"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:id="@+id/minute"
            android:textSize="23sp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/train_no_iconeView"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/blank"
            android:contentDescription="@string/whitespace"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableno"
            android:id="@+id/tableno"
            android:layout_gravity="bottom"
            android:textSize="8sp" />
    </LinearLayout>
</LinearLayout>
