<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train_no_id"
            android:id="@+id/textView"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" />

        <Spinner
            android:id="@+id/Spinner"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView">
        </Spinner>
        <RadioGroup android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Spinner"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true"
            android:orientation="horizontal">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holiday"
                    android:id="@+id/holiday"
                    android:layout_gravity="center_vertical|right"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekday"
                    android:id="@+id/weekday"
                    android:layout_gravity="center_vertical|right"
                    android:checked="true" />
        </RadioGroup>
    </RelativeLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/traintablelist"
        android:name="jp.chiba.tackn.monoviewer.train.TrainTableFragment"/>

</LinearLayout>

